--- a/plugins/sudoers/Makefile.in
+++ b/plugins/sudoers/Makefile.in
@@ -189,22 +189,23 @@ SUDOERS_OBJS = $(AUTH_OBJS) audit.lo boottime.lo callbacks.lo check.lo \
 	       gc.lo goodpath.lo group_plugin.lo interfaces.lo iolog.lo \
 	       iolog_path_escapes.lo locale.lo log_client.lo logging.lo \
 	       lookup.lo pivot.lo policy.lo prompt.lo serialize_list.lo \
-	       set_perms.lo starttime.lo strlcpy_unesc.lo strvec_join.lo \
-	       sudo_nss.lo sudoers.lo sudoers_ctx_free.lo timestamp.lo \
-	       unesc_str.lo @SUDOERS_OBJS@
+	       set_perms.lo sethost.lo starttime.lo strlcpy_unesc.lo \
+	       strvec_join.lo sudo_nss.lo sudoers.lo sudoers_ctx_free.lo \
+	       timestamp.lo unesc_str.lo @SUDOERS_OBJS@
 
 SUDOERS_IOBJS = $(SUDOERS_OBJS:.lo=.i)
 
 VISUDO_OBJS = check_aliases.o editor.lo find_path.lo gc.lo goodpath.lo \
-	      locale.lo stubs.o sudo_printf.o sudoers_ctx_free.lo visudo.o
+	      locale.lo sethost.lo stubs.o sudo_printf.o sudoers_ctx_free.lo \
+	      visudo.o
 
 VISUDO_IOBJS = sudo_printf.i visudo.i
 
 CVTSUDOERS_OBJS = b64_encode.o cvtsudoers.o cvtsudoers_json.o cvtsudoers_csv.o \
 		  cvtsudoers_ldif.o cvtsudoers_merge.o cvtsudoers_pwutil.o \
 		  fmtsudoers.lo fmtsudoers_cvt.lo locale.lo parse_ldif.o \
-		  stubs.o sudo_printf.o sudoers_ctx_free.lo ldap_util.lo \
-		  testsudoers_pwutil.o tsgetgrpw.o
+		  sethost.lo stubs.o sudo_printf.o sudoers_ctx_free.lo \
+		  ldap_util.lo testsudoers_pwutil.o tsgetgrpw.o
 
 CVTSUDOERS_IOBJS = cvtsudoers.i cvtsudoers_csv.i cvtsudoers_json.i \
 		   cvtsudoers_ldif.i cvtsudoers_merge.i cvtsudoers_pwutil.i
@@ -215,8 +216,8 @@ REPLAY_IOBJS = $(REPLAY_OBJS:.o=.i)
 
 TEST_OBJS = check_util.lo fmtsudoers.lo fmtsudoers_cvt.lo group_plugin.lo \
 	    interfaces.lo ldap_util.lo locale.lo lookup.lo net_ifs.o \
-	    parse_ldif.o sudo_printf.o sudoers_ctx_free.lo testsudoers.o \
-	    testsudoers_pwutil.o tsgetgrpw.o
+	    parse_ldif.o sethost.lo sudo_printf.o sudoers_ctx_free.lo \
+	    testsudoers.o testsudoers_pwutil.o tsgetgrpw.o
 
 IOBJS = $(LIBPARSESUDOERS_IOBJS) $(SUDOERS_IOBJS) $(VISUDO_IOBJS) \
 	$(CVTSUDOERS_IOBJS) $(REPLAY_IOBJS)
@@ -258,7 +259,7 @@ CHECK_SERIALIZE_LIST_OBJS = check_serialize_list.lo serialize_list.lo \
 
 FUZZ_POLICY_OBJS = callbacks.lo editor.lo env.lo env_pattern.lo fuzz_policy.o \
 		   fuzz_stubs.o gc.lo iolog_path_escapes.lo locale.lo \
-		   policy.lo serialize_list.lo strlcpy_unesc.lo \
+		   policy.lo sethost.lo serialize_list.lo strlcpy_unesc.lo \
 		   strvec_join.lo sudoers.lo sudoers_ctx_free.lo \
 		   sudoers_hooks.lo
 
@@ -2771,6 +2772,28 @@ set_perms.i: $(srcdir)/set_perms.c $(devdir)/def_data.h \
 	$(CC) -E -o $@ $(CPPFLAGS) $<
 set_perms.plog: set_perms.i
 	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/set_perms.c --i-file $< --output-file $@
+sethost.lo: $(srcdir)/sethost.c $(devdir)/def_data.h \
+            $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
+            $(incdir)/sudo_conf.h $(incdir)/sudo_debug.h \
+            $(incdir)/sudo_eventlog.h $(incdir)/sudo_fatal.h \
+            $(incdir)/sudo_gettext.h $(incdir)/sudo_plugin.h \
+            $(incdir)/sudo_queue.h $(incdir)/sudo_util.h $(srcdir)/defaults.h \
+            $(srcdir)/logging.h $(srcdir)/parse.h $(srcdir)/sudo_nss.h \
+            $(srcdir)/sudoers.h $(srcdir)/sudoers_debug.h \
+            $(top_builddir)/config.h $(top_builddir)/pathnames.h
+	$(LIBTOOL) $(LTFLAGS) --mode=compile $(CC) -c $(CPPFLAGS) $(CFLAGS) $(ASAN_CFLAGS) $(PIE_CFLAGS) $(HARDENING_CFLAGS) $(srcdir)/sethost.c
+sethost.i: $(srcdir)/sethost.c $(devdir)/def_data.h \
+            $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
+            $(incdir)/sudo_conf.h $(incdir)/sudo_debug.h \
+            $(incdir)/sudo_eventlog.h $(incdir)/sudo_fatal.h \
+            $(incdir)/sudo_gettext.h $(incdir)/sudo_plugin.h \
+            $(incdir)/sudo_queue.h $(incdir)/sudo_util.h $(srcdir)/defaults.h \
+            $(srcdir)/logging.h $(srcdir)/parse.h $(srcdir)/sudo_nss.h \
+            $(srcdir)/sudoers.h $(srcdir)/sudoers_debug.h \
+            $(top_builddir)/config.h $(top_builddir)/pathnames.h
+	$(CC) -E -o $@ $(CPPFLAGS) $<
+sethost.plog: sethost.i
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/sethost.c --i-file $< --output-file $@
 sia.lo: $(authdir)/sia.c $(authdir)/sudo_auth.h $(devdir)/def_data.h \
         $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
         $(incdir)/sudo_conf.h $(incdir)/sudo_debug.h $(incdir)/sudo_eventlog.h \
