Sudo assumes that a uid_t can be cast to unsigned int without problems.
Add a configure check and error out if sizeof(uid_t) > 4.

--- a/config.h.in
+++ b/config.h.in
@@ -1306,6 +1306,9 @@
 /* The size of 'time_t', as computed by sizeof. */
 #undef SIZEOF_TIME_T
 
+/* The size of 'uid_t', as computed by sizeof. */
+#undef SIZEOF_UID_T
+
 /* Define to 1 to compile the sudoers plugin statically into the sudo binary.
    */
 #undef STATIC_SUDOERS_PLUGIN
