--- a/docs/sudo.conf.mdoc.in
+++ b/docs/sudo.conf.mdoc.in
@@ -16,7 +16,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .nr SL @SEMAN@
-.Dd November 4, 2023
+.Dd November 6, 2023
 .Dt SUDO.CONF @mansectform@
 .Os Sudo @PACKAGE_VERSION@
 .Sh NAME
@@ -140,6 +140,13 @@ For example:
 .Bd -literal -offset 4n
 Plugin sudoers_policy @sudoers_plugin@
 .Ed
+.Pp
+On AIX systems, the plugin may be either a shared object
+ending in
+.Ql .so
+or an archive file containing a shared object ending in
+.Ql .a
+with the name of the shared object in parentheses at the end.
 .Pp
 Starting with
 .Nm sudo
@@ -532,6 +539,17 @@ plugin along with its associated programs and shared objects is
 but a third-party plugin is free to use a different format so long
 as it does not include a comma
 .Pq Ql \&, .
+.Pp
+On AIX systems, a
+.Em Debug
+line will match a plugin specified as either the name of an
+SVR4-style shared object file ending in
+.Ql .so ,
+an archive file ending in
+.Ql .a ,
+or an archive file ending in
+.Ql .a
+with the name of the shared object in parentheses.
 .Pp
 Examples:
 .Bd -literal -offset 4n
