Add support for a custom message when the command execution is denied.

--- a/docs/sudoers.man.in
+++ b/docs/sudoers.man.in
@@ -4507,6 +4507,10 @@ option.
 This option is only available when sudo is built with AppArmor
 support.
 .TP 18n
+cmddenial_message
+Message that is displayed after a user's command execution is denied.
+It does not override the default message, instead, it adds additional information for the user when set.
+.TP 18n
 authfail_message
 Message that is displayed after a user fails to authenticate.
 The message may include the
